[package]
name = "mip"
version = "0.3.0"
edition = "2021"

[dependencies]
wry = {version = "0.50"}
tokio = { version = "1", features = ["full"] }
warp = {version = "0.3"}
pulldown-cmark = { version = "0.9", default-features = false }
notify = {version = "5.0"}
rust-embed = {version = "6.4.0"}
rand = "0.8"
gray_matter = "0.2"
tao = "0.32"
gtk = { version = "0.18" }

#[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
#javascriptcore-rs = { version = "=1.1.2", features = [
#  "v2_28",
#], optional = true }
#webkit2gtk = { version = "=2.0.1", features = ["v2_38"], optional = true }
#webkit2gtk-sys = { version = "=2.0.1", optional = true }
#soup3 = { version = "0.5", optional = true }
#x11-dl = { version = "2.21", optional = true }
#gdkx11 = { version = "0.18", optional = true }
#percent-encoding = "2.3"
