[package]
name = "mip"
version = "0.3.0"
edition = "2024"

[dependencies]
gtk4 = "0.11"
webkit6 = "0.6"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3" }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
notify = { version = "7" }
rust-embed = { version = "8" }
rand = "0.9"
gray_matter = "0.2"
argh = "0.1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util", "macros"] }
